--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
 	implementation project(':auth')
 	implementation project(':common')
+	implementation project(':posts')
 }
 
 tasks.withType(KotlinCompile) {
