--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	implementation project(':common')
 	implementation project(':posts')
 	implementation project(':friends')
+	implementation project(':real-user-test')
 
 }
 
