--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.5'
 	id 'org.jetbrains.kotlin.jvm' version '1.9.24'
 	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.24'
+	id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.20'
 }
 
 group = 'com.sushobh'
@@ -34,7 +35,7 @@ dependencies {
 	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutinesVersion}")
 	implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor:${coroutinesVersion}")
 
-
+	implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3")
 
 	implementation 'org.springframework:spring-websocket'
 
