S? Refactoring for fren req APIs

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	implementation project(':posts')
 	implementation project(':friends')
 	implementation project(':real-user-test')
-
+	implementation project(':apiclasses')
 }
 
 tasks.withType(KotlinCompile) {
