--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 ---
 spring:
+  profiles:
+    active : "localhost"
+---
+
+spring:
   config:
     activate:
       on-profile: "localhost"
@@ -17,6 +22,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/solidtext
     username: postgres
     password: root
+  BASE_URL: "http://localhost:8080"
 ---
 spring:
   config:
@@ -26,7 +32,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/solidtext
     username: postgres
     password: root
-
+  BASE_URL: "http://localhost:8080"
 ---
 spring:
   config:
@@ -36,3 +42,4 @@ spring:
     url: jdbc:postgresql://ep-dawn-tree-a1334x5l.ap-southeast-1.aws.neon.tech/solidtext?sslmode=require
     username: solidtext_owner
     password: 7gc6NmRMVdZK
+  BASE_URL: "http://141.148.197.19:8080"
