--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     activate:
       on-profile: "localRemoteDev"
   datasource:
-    url: jdbc:postgresql://ep-dawn-tree-a1334x5l.ap-southeast-1.aws.neon.tech/solidtext?sslmode=require
+    url: jdbc:postgresql://ep-fancy-flower-a1l0qyw2.ap-southeast-1.aws.neon.tech/solidtext?sslmode=require
     username: solidtext_owner
     password: 7gc6NmRMVdZK
   BASE_URL: "http://localhost:8080"
@@ -51,7 +51,7 @@ spring:
     activate:
       on-profile: "remoteDev"
   datasource:
-    url: jdbc:postgresql://ep-dawn-tree-a1334x5l.ap-southeast-1.aws.neon.tech/solidtext?sslmode=require
+    url: jdbc:postgresql://ep-fancy-flower-a1l0qyw2.ap-southeast-1.aws.neon.tech/solidtext?sslmode=require
     username: solidtext_owner
     password: 7gc6NmRMVdZK
   BASE_URL: "http://141.148.197.19:8080"
